[metadata]
name = beautdown
version = attr: beautdown.version.__version__
description = Simulation of Optical Networks
long_description = file: README.md
long_description_content_type = text/markdown
author = Aniket Pradhan
author_email = aniketpradhan1999@gmail.com
doc_files = default_css.css

[options.entry_points]
console_scripts =
    beautdown=beautdown.main:main